sample/retrieveUnpackaged/objects/EncryptedKey__c.object
<CustomObject>
    <description>EncryptedKey table stores the Encrypted Key Type and Key Value</description>
    <fields>
        <fullName>Key1__c</fullName>
        <label>Key1</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Key2__c</fullName>
        <label>Key2</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Key3__c</fullName>
        <label>Key3</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EncryptedKey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EncryptedKey Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EncryptedKeys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>